# cli

./: README.md  package-lock.json  package.json
.github/workflows/: testdriver-proxy-ci.yml
testdriver-proxy/: .dockerignore  .env.example  .gitignore  CODEBASE_ANALYSIS.md  CODEBASE_ANALYSIS_PR2.md  DOCUMENTATION.md  Dockerfile  README.md  TESTING_GUIDE.md  TESTUI_USAGE_GUIDE.md  deploy-and-test.sh  docker-compose.yml  execute-test.sh  main.py  package-lock.json  package.json  pyproject.toml  server.js  server.js.backup  start-validation.sh  test-simple.yaml  ui_feature_tests.py
testdriver-proxy/docker/: Dockerfile  README.md  start.sh
testdriver-proxy/lib/: localSandbox.js  sandboxServer.js
testdriver-proxy/src/testdriver_proxy/: __init__.py  config.py  main.py  models.py  proxy.py
testdriver-proxy/tests/: __init__.py  google-analysis-tools-search.yaml  simple-test.yaml  test-all-testui-usages.sh  test-testui-all-usages.sh  test_integration.py  test_models.py
testdriver-proxy/tests/all/: test_config.py  test_proxy.py
testdriver-proxy/tests/scripts/: run_live_tests.sh  run_tests.sh
testdriver-proxy/tests/testui-samples/: quick-test.yaml
testdriver-proxy/tests/ui/test-app/: index.html  server.js
testdriver-proxy/tests/validation-dashboard/: dashboard-server.js  index.html
testdriver-proxy/utils/: logger.js
